<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <item android:id="@+id/action_dual_window" android:title="@string/menu_dual_window" app:showAsAction="never" />
    <item android:id="@+id/action_repeat_interval" android:title="@string/menu_repeat_interval" app:showAsAction="never" />
    <item android:id="@+id/action_price_difference" android:title="@string/menu_price_difference" app:showAsAction="never" />
    <item android:id="@+id/action_permissions" android:title="@string/menu_permissions" app:showAsAction="never" />
    <item android:id="@+id/action_toggle_monitoring" android:title="@string/menu_stop_monitoring" app:showAsAction="never" />
    <item android:id="@+id/action_about" android:title="@string/menu_about" app:showAsAction="never" />
</menu>
